parser/bison_parser.output
Terminals unused in grammar

    PARAMETERS
    TEMPORARY
    TIMESTAMP
    NVARCHAR
    RESTRICT
    ANALYZE
    CASCADE
    CONTROL
    DEFAULT
    EXPLAIN
    SCHEMAS
    SPATIAL
    VIRTUAL
    BEFORE
    DIRECT
    ESCAPE
    GLOBAL
    RENAME
    SCHEMA
    SORTED
    UNLOAD
    AFTER
    DELTA
    LOCAL
    MERGE
    MINUS
    CALL
    HASH
    LOAD
    PLAN
    ADD
    FOR
    OFF
    OF
    LESS
    GREATER
    NOTNULL
    UMINUS


Grammar

    0 $accept: input $end

    1 input: statement_list opt_semicolon

    2 statement_list: statement
    3               | statement_list ';' statement

    4 statement: prepare_statement opt_hints
    5          | preparable_statement opt_hints
    6          | show_statement
    7          | import_statement
    8          | export_statement

    9 preparable_statement: select_statement
   10                     | create_statement
   11                     | insert_statement
   12                     | delete_statement
   13                     | truncate_statement
   14                     | update_statement
   15                     | drop_statement
   16                     | alter_statement
   17                     | execute_statement
   18                     | transaction_statement

   19 opt_hints: WITH HINT '(' hint_list ')'
   20          | %empty

   21 hint_list: hint
   22          | hint_list ',' hint

   23 hint: IDENTIFIER
   24     | IDENTIFIER '(' literal_list ')'

   25 transaction_statement: BEGIN opt_transaction_keyword
   26                      | ROLLBACK opt_transaction_keyword
   27                      | COMMIT opt_transaction_keyword

   28 opt_transaction_keyword: TRANSACTION
   29                        | %empty

   30 prepare_statement: PREPARE IDENTIFIER FROM prepare_target_query

   31 prepare_target_query: STRING

   32 execute_statement: EXECUTE IDENTIFIER
   33                  | EXECUTE IDENTIFIER '(' opt_literal_list ')'

   34 import_statement: IMPORT FROM file_type FILE file_path INTO table_name
   35                 | COPY table_name FROM file_path opt_file_type

   36 file_type: IDENTIFIER

   37 file_path: string_literal

   38 opt_file_type: WITH FORMAT file_type
   39              | %empty

   40 export_statement: COPY table_name TO file_path opt_file_type

   41 show_statement: SHOW TABLES
   42               | SHOW COLUMNS table_name
   43               | DESCRIBE table_name

   44 create_statement: CREATE TABLE opt_not_exists table_name FROM IDENTIFIER FILE file_path
   45                 | CREATE TABLE opt_not_exists table_name '(' table_elem_commalist ')'
   46                 | CREATE TABLE opt_not_exists table_name AS select_statement
   47                 | CREATE INDEX opt_not_exists opt_index_name ON table_name '(' ident_commalist ')'
   48                 | CREATE VIEW opt_not_exists table_name opt_column_list AS select_statement

   49 opt_not_exists: IF NOT EXISTS
   50               | %empty

   51 table_elem_commalist: table_elem
   52                     | table_elem_commalist ',' table_elem

   53 table_elem: column_def
   54           | table_constraint

   55 column_def: IDENTIFIER column_type opt_column_constraints

   56 column_type: INT
   57            | INTEGER
   58            | LONG
   59            | FLOAT
   60            | DECIMAL opt_decimal_specification
   61            | DOUBLE
   62            | REAL
   63            | VARCHAR '(' INTVAL ')'
   64            | CHARACTER VARYING '(' INTVAL ')'
   65            | CHAR '(' INTVAL ')'
   66            | TEXT
   67            | TIME opt_time_specification
   68            | DATETIME
   69            | DATE

   70 opt_time_specification: '(' INTVAL ')'
   71                       | %empty

   72 opt_decimal_specification: '(' INTVAL ',' INTVAL ')'
   73                          | '(' INTVAL ')'
   74                          | %empty

   75 opt_column_constraints: column_constraint_list
   76                       | %empty

   77 column_constraint_list: column_constraint
   78                       | column_constraint_list column_constraint

   79 column_constraint: PRIMARY KEY
   80                  | UNIQUE
   81                  | NULL
   82                  | NOT NULL

   83 table_constraint: PRIMARY KEY '(' ident_commalist ')'
   84                 | UNIQUE '(' ident_commalist ')'

   85 drop_statement: DROP TABLE opt_exists table_name
   86               | DROP VIEW opt_exists table_name
   87               | DEALLOCATE PREPARE IDENTIFIER
   88               | DROP INDEX opt_exists IDENTIFIER

   89 opt_exists: IF EXISTS
   90           | %empty

   91 alter_statement: ALTER TABLE opt_exists table_name alter_action

   92 alter_action: drop_action

   93 drop_action: DROP COLUMN opt_exists IDENTIFIER

   94 delete_statement: DELETE FROM table_name opt_where

   95 truncate_statement: TRUNCATE table_name

   96 insert_statement: INSERT INTO table_name opt_column_list VALUES '(' literal_list ')'
   97                 | INSERT INTO table_name opt_column_list select_no_paren

   98 opt_column_list: '(' ident_commalist ')'
   99                | %empty

  100 update_statement: UPDATE table_ref_name_no_alias SET update_clause_commalist opt_where

  101 update_clause_commalist: update_clause
  102                        | update_clause_commalist ',' update_clause

  103 update_clause: IDENTIFIER '=' expr

  104 select_statement: opt_with_clause select_with_paren
  105                 | opt_with_clause select_no_paren
  106                 | opt_with_clause select_with_paren set_operator select_within_set_operation opt_order opt_limit

  107 select_within_set_operation: select_with_paren
  108                            | select_within_set_operation_no_parentheses

  109 select_within_set_operation_no_parentheses: select_clause
  110                                           | select_clause set_operator select_within_set_operation

  111 select_with_paren: '(' select_no_paren ')'
  112                  | '(' select_with_paren ')'

  113 select_no_paren: select_clause opt_order opt_limit
  114                | select_clause set_operator select_within_set_operation opt_order opt_limit

  115 set_operator: set_type opt_all

  116 set_type: UNION
  117         | INTERSECT
  118         | EXCEPT

  119 opt_all: ALL
  120        | %empty

  121 select_clause: SELECT opt_top opt_distinct select_list opt_from_clause opt_where opt_group

  122 opt_distinct: DISTINCT
  123             | %empty

  124 select_list: expr_list

  125 opt_from_clause: from_clause
  126                | %empty

  127 from_clause: FROM table_ref

  128 opt_where: WHERE expr
  129          | %empty

  130 opt_group: GROUP BY expr_list opt_having
  131          | %empty

  132 opt_having: HAVING expr
  133           | %empty

  134 opt_order: ORDER BY order_list
  135          | %empty

  136 order_list: order_desc
  137           | order_list ',' order_desc

  138 order_desc: expr opt_order_type

  139 opt_order_type: ASC
  140               | DESC
  141               | %empty

  142 opt_top: TOP int_literal
  143        | %empty

  144 opt_limit: LIMIT expr
  145          | OFFSET expr
  146          | LIMIT expr OFFSET expr
  147          | LIMIT ALL
  148          | LIMIT ALL OFFSET expr
  149          | %empty

  150 expr_list: expr_alias
  151          | expr_list ',' expr_alias

  152 opt_literal_list: literal_list
  153                 | %empty

  154 literal_list: literal
  155             | literal_list ',' literal

  156 expr_alias: expr opt_alias

  157 expr: operand
  158     | between_expr
  159     | logic_expr
  160     | exists_expr
  161     | in_expr

  162 operand: '(' expr ')'
  163        | array_index
  164        | scalar_expr
  165        | unary_expr
  166        | binary_expr
  167        | case_expr
  168        | function_expr
  169        | extract_expr
  170        | cast_expr
  171        | array_expr
  172        | '(' select_no_paren ')'

  173 scalar_expr: column_name
  174            | literal

  175 unary_expr: '-' operand
  176           | NOT operand
  177           | operand ISNULL
  178           | operand IS NULL
  179           | operand IS NOT NULL

  180 binary_expr: comp_expr
  181            | operand '-' operand
  182            | operand '+' operand
  183            | operand '/' operand
  184            | operand '*' operand
  185            | operand '%' operand
  186            | operand '^' operand
  187            | operand LIKE operand
  188            | operand NOT LIKE operand
  189            | operand ILIKE operand
  190            | operand CONCAT operand

  191 logic_expr: expr AND expr
  192           | expr OR expr

  193 in_expr: operand IN '(' expr_list ')'
  194        | operand NOT IN '(' expr_list ')'
  195        | operand IN '(' select_no_paren ')'
  196        | operand NOT IN '(' select_no_paren ')'

  197 case_expr: CASE expr case_list END
  198          | CASE expr case_list ELSE expr END
  199          | CASE case_list END
  200          | CASE case_list ELSE expr END

  201 case_list: WHEN expr THEN expr
  202          | case_list WHEN expr THEN expr

  203 exists_expr: EXISTS '(' select_no_paren ')'
  204            | NOT EXISTS '(' select_no_paren ')'

  205 comp_expr: operand '=' operand
  206          | operand EQUALS operand
  207          | operand NOTEQUALS operand
  208          | operand '<' operand
  209          | operand '>' operand
  210          | operand LESSEQ operand
  211          | operand GREATEREQ operand

  212 function_expr: IDENTIFIER '(' ')'
  213              | IDENTIFIER '(' opt_distinct expr_list ')'

  214 extract_expr: EXTRACT '(' datetime_field FROM expr ')'

  215 cast_expr: CAST '(' expr AS column_type ')'

  216 datetime_field: SECOND
  217               | MINUTE
  218               | HOUR
  219               | DAY
  220               | MONTH
  221               | YEAR

  222 datetime_field_plural: SECONDS
  223                      | MINUTES
  224                      | HOURS
  225                      | DAYS
  226                      | MONTHS
  227                      | YEARS

  228 duration_field: datetime_field
  229               | datetime_field_plural

  230 array_expr: ARRAY '[' expr_list ']'

  231 array_index: operand '[' int_literal ']'

  232 between_expr: operand BETWEEN operand AND operand

  233 column_name: IDENTIFIER
  234            | IDENTIFIER '.' IDENTIFIER
  235            | '*'
  236            | IDENTIFIER '.' '*'

  237 literal: string_literal
  238        | bool_literal
  239        | num_literal
  240        | null_literal
  241        | date_literal
  242        | interval_literal
  243        | param_expr

  244 string_literal: STRING

  245 bool_literal: TRUE
  246             | FALSE

  247 num_literal: FLOATVAL
  248            | int_literal

  249 int_literal: INTVAL

  250 null_literal: NULL

  251 date_literal: DATE STRING

  252 interval_literal: int_literal duration_field
  253                 | INTERVAL STRING datetime_field
  254                 | INTERVAL STRING

  255 param_expr: '?'

  256 table_ref: table_ref_atomic
  257          | table_ref_commalist ',' table_ref_atomic

  258 table_ref_atomic: nonjoin_table_ref_atomic
  259                 | join_clause

  260 nonjoin_table_ref_atomic: table_ref_name
  261                         | '(' select_statement ')' opt_table_alias

  262 table_ref_commalist: table_ref_atomic
  263                    | table_ref_commalist ',' table_ref_atomic

  264 table_ref_name: table_name opt_table_alias

  265 table_ref_name_no_alias: table_name

  266 table_name: IDENTIFIER
  267           | IDENTIFIER '.' IDENTIFIER

  268 opt_index_name: IDENTIFIER
  269               | %empty

  270 table_alias: alias
  271            | AS IDENTIFIER '(' ident_commalist ')'

  272 opt_table_alias: table_alias
  273                | %empty

  274 alias: AS IDENTIFIER
  275      | IDENTIFIER

  276 opt_alias: alias
  277          | %empty

  278 opt_with_clause: with_clause
  279                | %empty

  280 with_clause: WITH with_description_list

  281 with_description_list: with_description
  282                      | with_description_list ',' with_description

  283 with_description: IDENTIFIER AS select_with_paren

  284 join_clause: table_ref_atomic NATURAL JOIN nonjoin_table_ref_atomic
  285            | table_ref_atomic opt_join_type JOIN table_ref_atomic ON join_condition
  286            | table_ref_atomic opt_join_type JOIN table_ref_atomic USING '(' column_name ')'

  287 opt_join_type: INNER
  288              | LEFT OUTER
  289              | LEFT
  290              | RIGHT OUTER
  291              | RIGHT
  292              | FULL OUTER
  293              | OUTER
  294              | FULL
  295              | CROSS
  296              | %empty

  297 join_condition: expr

  298 opt_semicolon: ';'
  299              | %empty

  300 ident_commalist: IDENTIFIER
  301                | ident_commalist ',' IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 185
    '(' (40) 19 24 33 45 47 63 64 65 70 72 73 83 84 96 98 111 112 162 172 193 194 195 196 203 204 212 213 214 215 261 271 286
    ')' (41) 19 24 33 45 47 63 64 65 70 72 73 83 84 96 98 111 112 162 172 193 194 195 196 203 204 212 213 214 215 261 271 286
    '*' (42) 184 235 236
    '+' (43) 182
    ',' (44) 22 52 72 102 137 151 155 257 263 282 301
    '-' (45) 175 181
    '.' (46) 234 236 267
    '/' (47) 183
    ';' (59) 3 298
    '<' (60) 208
    '=' (61) 103 205
    '>' (62) 209
    '?' (63) 255
    '[' (91) 230 231
    ']' (93) 230 231
    '^' (94) 186
    error (256)
    IDENTIFIER <sval> (258) 23 24 30 32 33 36 44 55 87 88 93 103 212 213 233 234 236 266 267 268 271 274 275 283 300 301
    STRING <sval> (259) 31 244 251 253 254
    FLOATVAL <fval> (260) 247
    INTVAL <ival> (261) 63 64 65 70 72 73 249
    DEALLOCATE (262) 87
    PARAMETERS (263)
    INTERSECT (264) 117
    TEMPORARY (265)
    TIMESTAMP (266)
    DISTINCT (267) 122
    NVARCHAR (268)
    RESTRICT (269)
    TRUNCATE (270) 95
    ANALYZE (271)
    BETWEEN (272) 232
    CASCADE (273)
    COLUMNS (274) 42
    CONTROL (275)
    DEFAULT (276)
    EXECUTE (277) 32 33
    EXPLAIN (278)
    INTEGER (279) 57
    NATURAL (280) 284
    PREPARE (281) 30 87
    PRIMARY (282) 79 83
    SCHEMAS (283)
    CHARACTER (284) 64
    VARYING (285) 64
    REAL (286) 62
    DECIMAL (287) 60
    SPATIAL (288)
    VARCHAR (289) 63
    VIRTUAL (290)
    DESCRIBE (291) 43
    BEFORE (292)
    COLUMN (293) 93
    CREATE (294) 44 45 46 47 48
    DELETE (295) 94
    DIRECT (296)
    DOUBLE (297) 61
    ESCAPE (298)
    EXCEPT (299) 118
    EXISTS (300) 49 89 203 204
    EXTRACT (301) 214
    CAST (302) 215
    FORMAT (303) 38
    GLOBAL (304)
    HAVING (305) 132
    IMPORT (306) 34
    INSERT (307) 96 97
    ISNULL (308) 177
    OFFSET (309) 145 146 148
    RENAME (310)
    SCHEMA (311)
    SELECT (312) 121
    SORTED (313)
    TABLES (314) 41
    UNIQUE (315) 80 84
    UNLOAD (316)
    UPDATE (317) 100
    VALUES (318) 96
    AFTER (319)
    ALTER (320) 91
    CROSS (321) 295
    DELTA (322)
    FLOAT (323) 59
    GROUP (324) 130
    INDEX (325) 47 88
    INNER (326) 287
    LIMIT (327) 144 146 147 148
    LOCAL (328)
    MERGE (329)
    MINUS (330)
    ORDER (331) 134
    OUTER (332) 288 290 292 293
    RIGHT (333) 290 291
    TABLE (334) 44 45 46 85 91
    UNION (335) 116
    USING (336) 286
    WHERE (337) 128
    CALL (338)
    CASE (339) 197 198 199 200
    CHAR (340) 65
    COPY (341) 35 40
    DATE (342) 69 251
    DATETIME (343) 68
    DESC (344) 140
    DROP (345) 85 86 88 93
    ELSE (346) 198 200
    FILE (347) 34 44
    FROM (348) 30 34 35 44 94 127 214
    FULL (349) 292 294
    HASH (350)
    HINT (351) 19
    INTO (352) 34 96 97
    JOIN (353) 284 285 286
    LEFT (354) 288 289
    LIKE (355) 187 188
    LOAD (356)
    LONG (357) 58
    NULL (358) 81 82 178 179 250
    PLAN (359)
    SHOW (360) 41 42
    TEXT (361) 66
    THEN (362) 201 202
    TIME (363) 67
    VIEW (364) 48 86
    WHEN (365) 201 202
    WITH (366) 19 38 280
    ADD (367)
    ALL (368) 119 147 148
    AND (369) 191 232
    ASC (370) 139
    END (371) 197 198 199 200
    FOR (372)
    INT (373) 56
    KEY (374) 79 83
    NOT (375) 49 82 176 179 188 194 196 204
    OFF (376)
    SET (377) 100
    TOP (378) 142
    AS (379) 46 48 215 271 274 283
    BY (380) 130 134
    IF (381) 49 89
    IN (382) 193 194 195 196
    IS (383) 178 179
    OF (384)
    ON (385) 47 285
    OR (386) 192
    TO (387) 40
    ARRAY (388) 230
    CONCAT (389) 190
    ILIKE (390) 189
    SECOND (391) 216
    MINUTE (392) 217
    HOUR (393) 218
    DAY (394) 219
    MONTH (395) 220
    YEAR (396) 221
    SECONDS (397) 222
    MINUTES (398) 223
    HOURS (399) 224
    DAYS (400) 225
    MONTHS (401) 226
    YEARS (402) 227
    INTERVAL (403) 253 254
    TRUE (404) 245
    FALSE (405) 246
    TRANSACTION (406) 28
    BEGIN (407) 25
    COMMIT (408) 27
    ROLLBACK (409) 26
    EQUALS (410) 206
    NOTEQUALS (411) 207
    LESS (412)
    GREATER (413)
    LESSEQ (414) 210
    GREATEREQ (415) 211
    NOTNULL (416)
    UMINUS (417)


Nonterminals, with rules where they appear

    $accept (180)
        on left: 0
    input (181)
        on left: 1
        on right: 0
    statement_list <stmt_vec> (182)
        on left: 2 3
        on right: 1 3
    statement <statement> (183)
        on left: 4 5 6 7 8
        on right: 2 3
    preparable_statement <statement> (184)
        on left: 9 10 11 12 13 14 15 16 17 18
        on right: 5
    opt_hints <expr_vec> (185)
        on left: 19 20
        on right: 4 5
    hint_list <expr_vec> (186)
        on left: 21 22
        on right: 19 22
    hint <expr> (187)
        on left: 23 24
        on right: 21 22
    transaction_statement <transaction_stmt> (188)
        on left: 25 26 27
        on right: 18
    opt_transaction_keyword (189)
        on left: 28 29
        on right: 25 26 27
    prepare_statement <prep_stmt> (190)
        on left: 30
        on right: 4
    prepare_target_query <sval> (191)
        on left: 31
        on right: 30
    execute_statement <exec_stmt> (192)
        on left: 32 33
        on right: 17
    import_statement <import_stmt> (193)
        on left: 34 35
        on right: 7
    file_type <import_type_t> (194)
        on left: 36
        on right: 34 38
    file_path <sval> (195)
        on left: 37
        on right: 34 35 40 44
    opt_file_type <import_type_t> (196)
        on left: 38 39
        on right: 35 40
    export_statement <export_stmt> (197)
        on left: 40
        on right: 8
    show_statement <show_stmt> (198)
        on left: 41 42 43
        on right: 6
    create_statement <create_stmt> (199)
        on left: 44 45 46 47 48
        on right: 10
    opt_not_exists <bval> (200)
        on left: 49 50
        on right: 44 45 46 47 48
    table_elem_commalist <table_element_vec> (201)
        on left: 51 52
        on right: 45 52
    table_elem <table_element_t> (202)
        on left: 53 54
        on right: 51 52
    column_def <column_t> (203)
        on left: 55
        on right: 53
    column_type <column_type_t> (204)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 55 215
    opt_time_specification <column_specification_t> (205)
        on left: 70 71
        on right: 67
    opt_decimal_specification <column_specification_t> (206)
        on left: 72 73 74
        on right: 60
    opt_column_constraints <column_constraint_vec> (207)
        on left: 75 76
        on right: 55
    column_constraint_list <column_constraint_vec> (208)
        on left: 77 78
        on right: 75 78
    column_constraint <column_constraint_t> (209)
        on left: 79 80 81 82
        on right: 77 78
    table_constraint <table_constraint_t> (210)
        on left: 83 84
        on right: 54
    drop_statement <drop_stmt> (211)
        on left: 85 86 87 88
        on right: 15
    opt_exists <bval> (212)
        on left: 89 90
        on right: 85 86 88 91 93
    alter_statement <alter_stmt> (213)
        on left: 91
        on right: 16
    alter_action <alter_action_t> (214)
        on left: 92
        on right: 91
    drop_action <drop_action_t> (215)
        on left: 93
        on right: 92
    delete_statement <delete_stmt> (216)
        on left: 94
        on right: 12
    truncate_statement <delete_stmt> (217)
        on left: 95
        on right: 13
    insert_statement <insert_stmt> (218)
        on left: 96 97
        on right: 11
    opt_column_list <str_vec> (219)
        on left: 98 99
        on right: 48 96 97
    update_statement <update_stmt> (220)
        on left: 100
        on right: 14
    update_clause_commalist <update_vec> (221)
        on left: 101 102
        on right: 100 102
    update_clause <update_t> (222)
        on left: 103
        on right: 101 102
    select_statement <select_stmt> (223)
        on left: 104 105 106
        on right: 9 46 48 261
    select_within_set_operation <select_stmt> (224)
        on left: 107 108
        on right: 106 110 114
    select_within_set_operation_no_parentheses <select_stmt> (225)
        on left: 109 110
        on right: 108
    select_with_paren <select_stmt> (226)
        on left: 111 112
        on right: 104 106 107 112 283
    select_no_paren <select_stmt> (227)
        on left: 113 114
        on right: 97 105 111 172 195 196 203 204
    set_operator <set_operator_t> (228)
        on left: 115
        on right: 106 110 114
    set_type <set_operator_t> (229)
        on left: 116 117 118
        on right: 115
    opt_all <bval> (230)
        on left: 119 120
        on right: 115
    select_clause <select_stmt> (231)
        on left: 121
        on right: 109 110 113 114
    opt_distinct <bval> (232)
        on left: 122 123
        on right: 121 213
    select_list <expr_vec> (233)
        on left: 124
        on right: 121
    opt_from_clause <table> (234)
        on left: 125 126
        on right: 121
    from_clause <table> (235)
        on left: 127
        on right: 125
    opt_where <expr> (236)
        on left: 128 129
        on right: 94 100 121
    opt_group <group_t> (237)
        on left: 130 131
        on right: 121
    opt_having <expr> (238)
        on left: 132 133
        on right: 130
    opt_order <order_vec> (239)
        on left: 134 135
        on right: 106 113 114
    order_list <order_vec> (240)
        on left: 136 137
        on right: 134 137
    order_desc <order> (241)
        on left: 138
        on right: 136 137
    opt_order_type <order_type> (242)
        on left: 139 140 141
        on right: 138
    opt_top <limit> (243)
        on left: 142 143
        on right: 121
    opt_limit <limit> (244)
        on left: 144 145 146 147 148 149
        on right: 106 113 114
    expr_list <expr_vec> (245)
        on left: 150 151
        on right: 124 130 151 193 194 213 230
    opt_literal_list <expr_vec> (246)
        on left: 152 153
        on right: 33
    literal_list <expr_vec> (247)
        on left: 154 155
        on right: 24 96 152 155
    expr_alias <expr> (248)
        on left: 156
        on right: 150 151
    expr <expr> (249)
        on left: 157 158 159 160 161
        on right: 103 128 132 138 144 145 146 148 156 162 191 192 197 198 200 201 202 214 215 297
    operand <expr> (250)
        on left: 162 163 164 165 166 167 168 169 170 171 172
        on right: 157 175 176 177 178 179 181 182 183 184 185 186 187 188 189 190 193 194 195 196 205 206 207 208 209 210 211 231 232
    scalar_expr <expr> (251)
        on left: 173 174
        on right: 164
    unary_expr <expr> (252)
        on left: 175 176 177 178 179
        on right: 165
    binary_expr <expr> (253)
        on left: 180 181 182 183 184 185 186 187 188 189 190
        on right: 166
    logic_expr <expr> (254)
        on left: 191 192
        on right: 159
    in_expr <expr> (255)
        on left: 193 194 195 196
        on right: 161
    case_expr <expr> (256)
        on left: 197 198 199 200
        on right: 167
    case_list <expr> (257)
        on left: 201 202
        on right: 197 198 199 200 202
    exists_expr <expr> (258)
        on left: 203 204
        on right: 160
    comp_expr <expr> (259)
        on left: 205 206 207 208 209 210 211
        on right: 180
    function_expr <expr> (260)
        on left: 212 213
        on right: 168
    extract_expr <expr> (261)
        on left: 214
        on right: 169
    cast_expr <expr> (262)
        on left: 215
        on right: 170
    datetime_field <datetime_field> (263)
        on left: 216 217 218 219 220 221
        on right: 214 228 253
    datetime_field_plural <datetime_field> (264)
        on left: 222 223 224 225 226 227
        on right: 229
    duration_field <datetime_field> (265)
        on left: 228 229
        on right: 252
    array_expr <expr> (266)
        on left: 230
        on right: 171
    array_index <expr> (267)
        on left: 231
        on right: 163
    between_expr <expr> (268)
        on left: 232
        on right: 158
    column_name <expr> (269)
        on left: 233 234 235 236
        on right: 173 286
    literal <expr> (270)
        on left: 237 238 239 240 241 242 243
        on right: 154 155 174
    string_literal <expr> (271)
        on left: 244
        on right: 37 237
    bool_literal <expr> (272)
        on left: 245 246
        on right: 238
    num_literal <expr> (273)
        on left: 247 248
        on right: 239
    int_literal <expr> (274)
        on left: 249
        on right: 142 231 248 252
    null_literal <expr> (275)
        on left: 250
        on right: 240
    date_literal <expr> (276)
        on left: 251
        on right: 241
    interval_literal <expr> (277)
        on left: 252 253 254
        on right: 242
    param_expr <expr> (278)
        on left: 255
        on right: 243
    table_ref <table> (279)
        on left: 256 257
        on right: 127
    table_ref_atomic <table> (280)
        on left: 258 259
        on right: 256 257 262 263 284 285 286
    nonjoin_table_ref_atomic <table> (281)
        on left: 260 261
        on right: 258 284
    table_ref_commalist <table_vec> (282)
        on left: 262 263
        on right: 257 263
    table_ref_name <table> (283)
        on left: 264
        on right: 260
    table_ref_name_no_alias <table> (284)
        on left: 265
        on right: 100
    table_name <table_name> (285)
        on left: 266 267
        on right: 34 35 40 42 43 44 45 46 47 48 85 86 91 94 95 96 97 264 265
    opt_index_name <sval> (286)
        on left: 268 269
        on right: 47
    table_alias <alias_t> (287)
        on left: 270 271
        on right: 272
    opt_table_alias <alias_t> (288)
        on left: 272 273
        on right: 261 264
    alias <alias_t> (289)
        on left: 274 275
        on right: 270 276
    opt_alias <alias_t> (290)
        on left: 276 277
        on right: 156
    opt_with_clause <with_description_vec> (291)
        on left: 278 279
        on right: 104 105 106
    with_clause <with_description_vec> (292)
        on left: 280
        on right: 278
    with_description_list <with_description_vec> (293)
        on left: 281 282
        on right: 280 282
    with_description <with_description_t> (294)
        on left: 283
        on right: 281 282
    join_clause <table> (295)
        on left: 284 285 286
        on right: 259
    opt_join_type <join_type> (296)
        on left: 287 288 289 290 291 292 293 294 295 296
        on right: 285 286
    join_condition <expr> (297)
        on left: 297
        on right: 285
    opt_semicolon (298)
        on left: 298 299
        on right: 1
    ident_commalist <str_vec> (299)
        on left: 300 301
        on right: 47 83 84 98 271 301


State 0

    0 $accept: . input $end

    DEALLOCATE  shift, and go to state 1
    TRUNCATE    shift, and go to state 2
    EXECUTE     shift, and go to state 3
    PREPARE     shift, and go to state 4
    DESCRIBE    shift, and go to state 5
    CREATE      shift, and go to state 6
    DELETE      shift, and go to state 7
    IMPORT      shift, and go to state 8
    INSERT      shift, and go to state 9
    UPDATE      shift, and go to state 10
    ALTER       shift, and go to state 11
    COPY        shift, and go to state 12
    DROP        shift, and go to state 13
    SHOW        shift, and go to state 14
    WITH        shift, and go to state 15
    BEGIN       shift, and go to state 16
    COMMIT      shift, and go to state 17
    ROLLBACK    shift, and go to state 18

    $default  reduce using rule 279 (opt_with_clause)

    input                  go to state 19
    statement_list         go to state 20
    statement              go to state 21
    preparable_statement   go to state 22
    transaction_statement  go to state 23
    prepare_statement      go to state 24
    execute_statement      go to state 25
    import_statement       go to state 26
    export_statement       go to state 27
    show_statement         go to state 28
    create_statement       go to state 29
    drop_statement         go to state 30
    alter_statement        go to state 31
    delete_statement       go to state 32
    truncate_statement     go to state 33
    insert_statement       go to state 34
    update_statement       go to state 35
    select_statement       go to state 36
    opt_with_clause        go to state 37
    with_clause            go to state 38


State 1

   87 drop_statement: DEALLOCATE . PREPARE IDENTIFIER

    PREPARE  shift, and go to state 39


State 2

   95 truncate_statement: TRUNCATE . table_name

    IDENTIFIER  shift, and go to state 40

    table_name  go to state 41


State 3

   32 execute_statement: EXECUTE . IDENTIFIER
   33                  | EXECUTE . IDENTIFIER '(' opt_literal_list ')'

    IDENTIFIER  shift, and go to state 42


State 4

   30 prepare_statement: PREPARE . IDENTIFIER FROM prepare_target_query

    IDENTIFIER  shift, and go to state 43


State 5

   43 show_statement: DESCRIBE . table_name

    IDENTIFIER  shift, and go to state 40

    table_name  go to state 44


State 6

   44 create_statement: CREATE . TABLE opt_not_exists table_name FROM IDENTIFIER FILE file_path
   45                 | CREATE . TABLE opt_not_exists table_name '(' table_elem_commalist ')'
   46                 | CREATE . TABLE opt_not_exists table_name AS select_statement
   47                 | CREATE . INDEX opt_not_exists opt_index_name ON table_name '(' ident_commalist ')'
   48                 | CREATE . VIEW opt_not_exists table_name opt_column_list AS select_statement

    INDEX  shift, and go to state 45
    TABLE  shift, and go to state 46
    VIEW   shift, and go to state 47


State 7

   94 delete_statement: DELETE . FROM table_name opt_where

    FROM  shift, and go to state 48


State 8

   34 import_statement: IMPORT . FROM file_type FILE file_path INTO table_name

    FROM  shift, and go to state 49


State 9

   96 insert_statement: INSERT . INTO table_name opt_column_list VALUES '(' literal_list ')'
   97                 | INSERT . INTO table_name opt_column_list select_no_paren

    INTO  shift, and go to state 50


State 10

  100 update_statement: UPDATE . table_ref_name_no_alias SET update_clause_commalist opt_where

    IDENTIFIER  shift, and go to state 40

    table_ref_name_no_alias  go to state 51
    table_name               go to state 52


State 11

   91 alter_statement: ALTER . TABLE opt_exists table_name alter_action

    TABLE  shift, and go to state 53


State 12

   35 import_statement: COPY . table_name FROM file_path opt_file_type
   40 export_statement: COPY . table_name TO file_path opt_file_type

    IDENTIFIER  shift, and go to state 40

    table_name  go to state 54


State 13

   85 drop_statement: DROP . TABLE opt_exists table_name
   86               | DROP . VIEW opt_exists table_name
   88               | DROP . INDEX opt_exists IDENTIFIER

    INDEX  shift, and go to state 55
    TABLE  shift, and go to state 56
    VIEW   shift, and go to state 57


State 14

   41 show_statement: SHOW . TABLES
   42               | SHOW . COLUMNS table_name

    COLUMNS  shift, and go to state 58
    TABLES   shift, and go to state 59


State 15

  280 with_clause: WITH . with_description_list

    IDENTIFIER  shift, and go to state 60

    with_description_list  go to state 61
    with_description       go to state 62


State 16

   25 transaction_statement: BEGIN . opt_transaction_keyword

    TRANSACTION  shift, and go to state 63

    $default  reduce using rule 29 (opt_transaction_keyword)

    opt_transaction_keyword  go to state 64


State 17

   27 transaction_statement: COMMIT . opt_transaction_keyword

    TRANSACTION  shift, and go to state 63

    $default  reduce using rule 29 (opt_transaction_keyword)

    opt_transaction_keyword  go to state 65


State 18

   26 transaction_statement: ROLLBACK . opt_transaction_keyword

    TRANSACTION  shift, and go to state 63

    $default  reduce using rule 29 (opt_transaction_keyword)

    opt_transaction_keyword  go to state 66


State 19

    0 $accept: input . $end

    $end  shift, and go to state 67


State 20

    1 input: statement_list . opt_semicolon
    3 statement_list: statement_list . ';' statement

    ';'  shift, and go to state 68

    $default  reduce using rule 299 (opt_semicolon)

    opt_semicolon  go to state 69


State 21

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


State 22

    5 statement: preparable_statement . opt_hints

    WITH  shift, and go to state 70

    $default  reduce using rule 20 (opt_hints)

    opt_hints  go to state 71


State 23

   18 preparable_statement: transaction_statement .

    $default  reduce using rule 18 (preparable_statement)


State 24

    4 statement: prepare_statement . opt_hints

    WITH  shift, and go to state 70

    $default  reduce using rule 20 (opt_hints)

    opt_hints  go to state 72


State 25

   17 preparable_statement: execute_statement .

    $default  reduce using rule 17 (preparable_statement)


State 26

    7 statement: import_statement .

    $default  reduce using rule 7 (statement)


State 27

    8 statement: export_statement .

    $default  reduce using rule 8 (statement)


State 28

    6 statement: show_statement .

    $default  reduce using rule 6 (statement)


State 29

   10 preparable_statement: create_statement .

    $default  reduce using rule 10 (preparable_statement)


State 30

   15 preparable_statement: drop_statement .

    $default  reduce using rule 15 (preparable_statement)


State 31

   16 preparable_statement: alter_statement .

    $default  reduce using rule 16 (preparable_statement)


State 32

   12 preparable_statement: delete_statement .

    $default  reduce using rule 12 (preparable_statement)


State 33

   13 preparable_statement: truncate_statement .

    $default  reduce using rule 13 (preparable_statement)


State 34

   11 preparable_statement: insert_statement .

    $default  reduce using rule 11 (preparable_statement)


State 35

   14 preparable_statement: update_statement .

    $default  reduce using rule 14 (preparable_statement)


State 36

    9 preparable_statement: select_statement .

    $default  reduce using rule 9 (preparable_statement)


State 37
